--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Gamedev Startup
 description: A blog about founding a mobile game startup.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/gamedevstartup/gamedevstartup.github.io/master/images/gamedevRocket.png
+avatar: https://raw.githubusercontent.com/gamedevstartup/blog/master/images/gamedevRocket.png
 
 #
 # Flags below are optional
